added dummy data .

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#025A6C</color>
+    <color name="colorPrimary">#59B7E4</color>
     <color name="colorPrimaryDark">#025A6C</color>
     <color name="colorAccent">#025A6C</color>
 </resources>
