--- a/app/src/main/res/layout/productsadapterlayout.xml
+++ b/app/src/main/res/layout/productsadapterlayout.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardElevation="3dp"
+    android:padding="10dp"
+    android:background="@drawable/background_shape"
     android:layout_marginTop="10dp"
-    android:layout_marginEnd="20dp"
-    android:layout_marginStart="20dp"
-    android:layout_height="match_parent">
+    android:layout_marginEnd="10dp"
+    android:layout_marginStart="10dp"
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:orientation="vertical"
@@ -12,24 +16,39 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <ImageView
+            android:padding="18dp"
+            android:backgroundTint="#000"
+            android:src="@drawable/banana"
+            android:scaleType="fitCenter"
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/products_imageview"
-            android:scaleType="fitCenter"/>
+            />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:layout_width="match_parent"
+            android:gravity="center"
+            android:layout_height="wrap_content"
+            android:text="Managu"
+            android:id="@+id/products_name_tv"
+            style="@style/TextAppearance.MaterialComponents.Headline5"/>
         <com.google.android.material.textview.MaterialTextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="@style/TextAppearance.MaterialComponents.Headline3"
+            style="@style/TextAppearance.MaterialComponents.Headline5"
             android:text="KSh 50.00"
+            android:gravity="center"
             android:id="@+id/products_amount_tv"
             android:textStyle="bold"
             />
         <com.google.android.material.textview.MaterialTextView
             android:layout_width="match_parent"
+            android:gravity="center"
             android:layout_height="wrap_content"
-            android:text="Managu"
-            android:id="@+id/products_name_tv"
-            style="@style/TextAppearance.MaterialComponents.Headline3"/>
+            android:text="Per Kg"
+
+            style="@style/TextAppearance.MaterialComponents.Headline6"/>
 
 
 
