--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -1,34 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_marginTop="20dp"
+    android:layout_height="wrap_content">
 
     <de.hdodenhof.circleimageview.CircleImageView
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/profile_image"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:id="@+id/image"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
         android:src="@drawable/banana"
-        app:civ_border_width="2dp"
+        app:civ_border_width="0.0dp"
         app:civ_border_color="#FF000000"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:text="1"
+        android:layout_marginStart="15dp"
+        android:layout_centerVertical="true"
+
+        android:layout_toEndOf="@id/image"
+        android:id="@+id/quantity"
+        android:textColor="@color/colorWhite"
+
 
         android:layout_height="wrap_content"/>
     <TextView
         android:layout_width="wrap_content"
+        android:layout_toEndOf="@id/quantity"
         android:text="X"
+        android:textSize="13dp"
+        android:layout_marginStart="6dp"
+        android:layout_centerVertical="true"
+        android:id="@+id/dif"
+        android:textColor="@color/colorWhite"
         android:layout_height="wrap_content"/>
     <TextView
         android:layout_width="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_centerVertical="true"
+
         android:text="NewMans own Pasta Sauce Sockarooni"
+        android:layout_toStartOf="@id/price"
+        android:layout_toEndOf="@id/dif"
+        android:textColor="@color/colorWhite"
         android:layout_height="wrap_content"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:text="$30.00"
+        android:layout_centerVertical="true"
+        android:textColor="@color/colorWhite"
+        android:id="@+id/price"
+        android:layout_alignParentEnd="true"
         android:layout_height="wrap_content"/>
 
 
