--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingEnd="35dp"
-    android:paddingStart="35dp"
+    android:background="@color/colorBlack"
+    android:paddingEnd="20dp"
+    android:paddingStart="20dp"
     tools:context=".CartFragment">
 
 
