--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -16,7 +16,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/products_recycler"
+        android:id="@+id/cart_recycler"
         android:layout_above="@id/checkout"
         tools:listitem="@layout/cart_item"/>
 
