added dynamic cart data

--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -15,7 +15,7 @@
 
     <TextView
         android:layout_width="wrap_content"
-        android:text="1"
+
         android:layout_marginStart="15dp"
         android:layout_centerVertical="true"
 
@@ -29,7 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_toEndOf="@id/quantity"
         android:text="X"
-        android:textSize="13dp"
+        android:textSize="13sp"
         android:layout_marginStart="6dp"
         android:layout_centerVertical="true"
         android:id="@+id/dif"
@@ -39,8 +39,9 @@
         android:layout_width="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_centerVertical="true"
+        android:id="@+id/name"
 
-        android:text="NewMans own Pasta Sauce Sockarooni"
+
         android:layout_toStartOf="@id/price"
         android:layout_toEndOf="@id/dif"
         android:textColor="@color/colorWhite"
@@ -48,7 +49,7 @@
 
     <TextView
         android:layout_width="wrap_content"
-        android:text="$30.00"
+
         android:layout_centerVertical="true"
         android:textColor="@color/colorWhite"
         android:id="@+id/price"
