--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#59B7E4</color>
+<!--    <color name="colorPrimary">#59B7E4</color>-->
+    <color name="colorPrimary">#03697E</color>
+<!--    <color name="colorPrimary">#025A6C</color>-->
     <color name="colorPrimaryDark">#025A6C</color>
     <color name="colorAccent">#025A6C</color>
     <color name="colorYellow">#F8C349</color>
     <color name="colorBlack">#000</color>
     <color name="colorWhite">#fff</color>
     <color name="gray">#5E6159</color>
+    <color name="teal">#009688</color>
 </resources>
