--- a/app/src/main/res/layout/productsadapterlayout.xml
+++ b/app/src/main/res/layout/productsadapterlayout.xml
@@ -14,9 +14,10 @@
         android:orientation="vertical"
 
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="5dp">
         <ImageView
-            android:padding="18dp"
+            android:padding="6dp"
             android:backgroundTint="#000"
             android:src="@drawable/banana"
             android:scaleType="fitCenter"
@@ -32,25 +33,19 @@
             android:layout_height="wrap_content"
             android:text="Managu"
             android:id="@+id/products_name_tv"
-            style="@style/TextAppearance.MaterialComponents.Headline5"/>
+            android:textSize="20sp"
+            style="bold"/>
         <com.google.android.material.textview.MaterialTextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="@style/TextAppearance.MaterialComponents.Headline5"
             android:text="KSh 50.00"
             android:gravity="center"
-            android:id="@+id/products_amount_tv"
-            android:textStyle="bold"
-            />
+            android:id="@+id/products_amount_tv" />
         <com.google.android.material.textview.MaterialTextView
             android:layout_width="match_parent"
             android:gravity="center"
             android:layout_height="wrap_content"
-            android:text="Per Kg"
-
-            style="@style/TextAppearance.MaterialComponents.Headline6"/>
-
-
+            android:text="Per Kg" />
 
     </LinearLayout>
 
